@@ -1,6 +1,0 @@
-alienfile
-Changes
-lib/Alien/Pluto.pm
-Makefile.PL
-MANIFEST			This list of files
-README.md
