@@ -1,111 +1,0 @@
-{
-   "abstract" : "Find Or Download/Build/Install libpluto In Pluto",
-   "author" : [
-      "Will Braswell <wbraswell@cpan.org>"
-   ],
-   "description" : "Pluto PolyCC is a parallelizing compiler suite, written in C, compiled and installed via Alien",
-   "dynamic_config" : 0,
-   "generated_by" : "ExtUtils::MakeMaker version 7.0401, CPAN::Meta::Converter version 2.150005",
-   "keywords" : [
-      "alien",
-      "pluto",
-      "polycc",
-      "candl",
-      "cloog",
-      "orio",
-      "compiler",
-      "parallel",
-      "parallelization"
-   ],
-   "license" : [
-      "perl_5"
-   ],
-   "meta-spec" : {
-      "url" : "http://search.cpan.org/perldoc?CPAN::Meta::Spec",
-      "version" : "2"
-   },
-   "name" : "Alien-Pluto",
-   "no_index" : {
-      "directory" : [
-         "t",
-         "inc"
-      ]
-   },
-   "prereqs" : {
-      "build" : {
-         "requires" : {
-            "Alien::Build::MM" : "0.25",
-            "Alien::Texinfo" : "0",
-            "Alien::gmake" : "0.11",
-            "Archive::Tar" : "0",
-            "Config" : "0",
-            "Env::ShellWords" : "0.01",
-            "HTML::LinkExtor" : "0",
-            "HTTP::Tiny" : "0.044",
-            "IO::Socket::SSL" : "1.56",
-            "IO::Zlib" : "0",
-            "Net::SSLeay" : "1.49",
-            "Sort::Versions" : "0",
-            "URI" : "0",
-            "URI::Escape" : "0"
-         }
-      },
-      "configure" : {
-         "requires" : {
-            "Alien::Build" : "1.32",
-            "Alien::Build::MM" : "0.25",
-            "Alien::Build::Plugin::Build::SearchDep" : "0.53",
-            "Alien::Texinfo" : "0.002",
-            "ExtUtils::CBuilder" : "0",
-            "IO::Socket::SSL" : "2.043"
-         }
-      },
-      "runtime" : {
-         "requires" : {
-            "Alien::Build" : "0.25",
-            "Test2::Suite" : "0.000072"
-         }
-      }
-   },
-   "release_status" : "stable",
-   "resources" : {
-      "bugtracker" : {
-         "web" : "http://rt.cpan.org/Public/Dist/Display.html?Name=Alien-Pluto"
-      },
-      "homepage" : "http://pluto-compiler.sourceforge.net/",
-      "license" : [
-         "http://dev.perl.org/licenses/"
-      ],
-      "repository" : {
-         "type" : "git",
-         "url" : "git://github.com/wbraswell/alien-pluto.git",
-         "web" : "https://github.com/wbraswell/alien-pluto"
-      },
-      "x_IRC" : "irc://irc.perl.org/#native",
-      "x_mailinglist" : "http://groups.google.com/group/pluto-development",
-      "x_wiki" : "https://en.wikipedia.org/wiki/Pluto_(disambiguation)"
-   },
-   "version" : "0.001000",
-   "x_alienfile" : {
-      "generated_by" : "Alien::Build::MM version 1.32",
-      "requires" : {
-         "share" : {
-            "Alien::Texinfo" : "0",
-            "Alien::gmake" : "0.11",
-            "Archive::Tar" : "0",
-            "Config" : "0",
-            "Env::ShellWords" : "0.01",
-            "HTML::LinkExtor" : "0",
-            "HTTP::Tiny" : "0.044",
-            "IO::Socket::SSL" : "1.56",
-            "IO::Zlib" : "0",
-            "Net::SSLeay" : "1.49",
-            "Sort::Versions" : "0",
-            "URI" : "0",
-            "URI::Escape" : "0"
-         },
-         "system" : {}
-      }
-   },
-   "x_serialization_backend" : "JSON::PP version 2.27300"
-}
